--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mercadopago",
+  "name": "mercadopago2021",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mercadopago": "^1.5.8"
   }
 }
